; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/bhndb/extr_bhndb_subr.c_bhnd_generic_br_suspend_child.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/bhndb/extr_bhndb_subr.c_bhnd_generic_br_suspend_child.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource_list = type { i32 }

@EBUSY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bhnd_generic_br_suspend_child(i64 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.resource_list*, align 8
  %7 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = call i64 @device_get_parent(i64 %8)
  %10 = load i64, i64* %4, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %17

12:                                               ; preds = %2
  %13 = load i64, i64* %4, align 8
  %14 = call i64 @device_get_parent(i64 %13)
  %15 = load i64, i64* %5, align 8
  %16 = call i32 @BUS_SUSPEND_CHILD(i64 %14, i64 %15)
  br label %17

17:                                               ; preds = %12, %2
  %18 = load i64, i64* %5, align 8
  %19 = call i64 @device_is_suspended(i64 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = load i32, i32* @EBUSY, align 4
  store i32 %22, i32* %3, align 4
  br label %42

23:                                               ; preds = %17
  %24 = load i64, i64* %4, align 8
  %25 = load i64, i64* %5, align 8
  %26 = call i32 @bhnd_generic_suspend_child(i64 %24, i64 %25)
  store i32 %26, i32* %7, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %23
  %29 = load i32, i32* %7, align 4
  store i32 %29, i32* %3, align 4
  br label %42

30:                                               ; preds = %23
  %31 = load i64, i64* %5, align 8
  %32 = call i64 @device_get_parent(i64 %31)
  %33 = load i64, i64* %5, align 8
  %34 = call %struct.resource_list* @BUS_GET_RESOURCE_LIST(i64 %32, i64 %33)
  store %struct.resource_list* %34, %struct.resource_list** %6, align 8
  %35 = load %struct.resource_list*, %struct.resource_list** %6, align 8
  %36 = icmp eq %struct.resource_list* %35, null
  br i1 %36, label %37, label %38

37:                                               ; preds = %30
  store i32 0, i32* %3, align 4
  br label %42

38:                                               ; preds = %30
  %39 = load i64, i64* %4, align 8
  %40 = load %struct.resource_list*, %struct.resource_list** %6, align 8
  %41 = call i32 @bhndb_do_suspend_resources(i64 %39, %struct.resource_list* %40)
  store i32 0, i32* %3, align 4
  br label %42

42:                                               ; preds = %38, %37, %28, %21
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i64 @device_get_parent(i64) #1

declare dso_local i32 @BUS_SUSPEND_CHILD(i64, i64) #1

declare dso_local i64 @device_is_suspended(i64) #1

declare dso_local i32 @bhnd_generic_suspend_child(i64, i64) #1

declare dso_local %struct.resource_list* @BUS_GET_RESOURCE_LIST(i64, i64) #1

declare dso_local i32 @bhndb_do_suspend_resources(i64, %struct.resource_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
